--- a/sources.html
+++ b/sources.html
@@ -22,12 +22,12 @@
             <div>Logo made with <a href="https://
                 www.designevo.com/" title="Free Online Logo Maker">DesignEvo</a></div>
             <h3> Tours </h3>
-            <p>Images and information taken from <a src=" https://www.mensjournal.com/adventure/the-15-best-mountain-biking-trails-in-montana-20150818/grizzly-loop/">Men's Journal</a> </p>
+            <p>Images and information taken from <a href=" https://www.mensjournal.com/adventure/the-15-best-mountain-biking-trails-in-montana-20150818/grizzly-loop/">Men's Journal</a> </p>
             <h3> Service </h3>
             <p>Repair Costs taken from <a src="http://www.roundhouse-sports.com/bike-shop.html"> Round House Ski and Sports Center</a></p>
 
             <h3> Images </h3>
-            <p> Additional mountain biking images taken from <a src="http://www.visitmt.com/things-to-do/outdoor-and-adventure/mountain-biking.html">Mountain Bike Montana</a></p>
+            <p> Additional mountain biking images taken from <a href="http://www.visitmt.com/things-to-do/outdoor-and-adventure/mountain-biking.html">Mountain Bike Montana</a></p>
 
             <h3>Sales</h3>
             <p>Images and descriptions from <a href="https://www.bicycling.com/bikes-gear/recommended/16-for-2016-the-best-new-mountain-bikes-of-2016/slide/5">Bicycling.com</a></p>
