--- a/sources.html
+++ b/sources.html
@@ -18,6 +18,8 @@
         <nav> <!-- Future navigational menu-->
         </nav>
         <main>
+            <h3>Video Walkthrough</h3>
+            <video width="200px" controls><source src="img/MountainSpokeVideoWalkthrough.mp4" type="video/mp4"></video>
             <h3> Logo </h3>
             <div>Logo made with <a href="https://
                 www.designevo.com/" title="Free Online Logo Maker">DesignEvo</a></div>
