--- a/sources.html
+++ b/sources.html
@@ -26,7 +26,7 @@
             <h3> Tours </h3>
             <p>Images and information taken from <a href=" https://www.mensjournal.com/adventure/the-15-best-mountain-biking-trails-in-montana-20150818/grizzly-loop/">Men's Journal</a> </p>
             <h3> Service </h3>
-            <p>Repair Costs taken from <a src="http://www.roundhouse-sports.com/bike-shop.html"> Round House Ski and Sports Center</a></p>
+            <p>Repair Costs taken from <a href="http://www.roundhouse-sports.com/bike-shop.html"> Round House Ski and Sports Center</a></p>
 
             <h3> Images </h3>
             <p> Additional mountain biking images taken from <a href="http://www.visitmt.com/things-to-do/outdoor-and-adventure/mountain-biking.html">Mountain Bike Montana</a></p>
